<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/siberian_husky_eyes" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="166dp"
        android:layout_height="154dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/images" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="110dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/profile_name"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/icon2"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/icon1"
        app:layout_constraintEnd_toStartOf="@+id/icon3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/icon1"
        app:layout_constraintTop_toTopOf="@+id/icon1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

    <ImageView
        android:id="@+id/icon1"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginTop="36dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/icon2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_add_circle_black_24dp" />

    <ImageView
        android:id="@+id/icon3"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/icon2"
        app:layout_constraintEnd_toStartOf="@+id/icon4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/icon2"
        app:layout_constraintTop_toTopOf="@+id/icon2"
        app:srcCompat="@drawable/ic_remove_red_eye_black_24dp" />

    <ImageView
        android:id="@+id/icon4"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/icon3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/icon3"
        app:layout_constraintTop_toTopOf="@+id/icon3"
        app:srcCompat="@drawable/ic_more_horiz_black_24dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_story"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/icon1"
        app:layout_constraintStart_toStartOf="@+id/icon1"
        app:layout_constraintTop_toBottomOf="@+id/icon1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_photo"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/icon2"
        app:layout_constraintStart_toStartOf="@+id/icon2"
        app:layout_constraintTop_toBottomOf="@+id/icon2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/view_as"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/icon3"
        app:layout_constraintStart_toStartOf="@+id/icon3"
        app:layout_constraintTop_toBottomOf="@+id/icon3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/more_icon"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/icon4"
        app:layout_constraintStart_toStartOf="@+id/icon4"
        app:layout_constraintTop_toBottomOf="@+id/icon4" />

</androidx.constraintlayout.widget.ConstraintLayout>